Updated to work with state graph

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
-# VS Code Extension Bridge Configuration
-VSCODE_BRIDGE_URL=ws://127.0.0.1:17373
+# WEBSOCKET Configuration (LLM streaming backend)
+BIBSCRIP_API_KEY=your-api-key-here
+BIBSCRIP_BASE_URL=http://localhost:4000
+WEBSOCKET_URL=ws://localhost:4000/ws/stream
 
 # Development
 NODE_ENV=development
+
+# MCP Service URLs (StateGraph routing)
+MCP_CONVERSATION_URL=http://localhost:3004
+MCP_USER_MEMORY_URL=http://localhost:3001
+MCP_WEB_SEARCH_URL=http://localhost:3002
+MCP_COMMAND_URL=http://localhost:3003
+MCP_SCREEN_INTELLIGENCE_URL=http://localhost:3008
+MCP_PHI4_URL=http://localhost:3005
+MCP_COREFERENCE_URL=http://localhost:3006
+
+# Shared MCP API key (used for all services unless overridden per-service)
+MCP_API_KEY=
